--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ langchain-text-splitters==1.1.0
 
 # --- Vector store ---
 chromadb==0.5.23
+posthog==3.5.0
 
 # --- Gemini ---
 google-generativeai==0.8.3
