--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 CHROMA_TELEMETRY=FALSE
 GEMINI_API_KEY=you_gemini_api_key
+GEMINI_MODEL=models/gemini-flash-latest
+MEMORY_MAX_MESSAGES=10
 CHUNK_SIZE=500
 CHUNK_OVERLAP=50
-PROMPT_STRUCTURE=
