--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
-CHROMA_TELEMETRY=FALSE
-GEMINI_API_KEY=you_gemini_api_key
+GOOGLE_API_KEY=your_google_api_key
 GEMINI_MODEL=models/gemini-flash-latest
 MEMORY_MAX_MESSAGES=10
+HYBRID_VECTOR_K=8
+HYBRID_BM25_K=8
+RRF_K=60
 CHUNK_SIZE=500
 CHUNK_OVERLAP=50
